2012-03-04  Paul Smith  <psmith@gnu.org>

	* expand.c (variable_append): If the current set is local and the
	next one is not a parent, then treat the next set as
	local as well.  Fixes Savannah bug #35468.

2012-03-03  Paul Smith  <psmith@gnu.org>

	* acinclude.m4 (AC_STRUCT_ST_MTIM_NSEC): Add support for AIX 5.2+
	nanosecond timestamps.  Fixes Savannah bug #32485.

	Convert uses of `foo' for quoting to 'foo' to reflect changes in
	the GNU Coding Standards.  Fixes Savannah bug #34530.

	* job.c (construct_command_argv_internal): In oneshell we need to
	break the SHELLFLAGS up for argv.  Fixes Savannah bug #35397.

	* function.c (func_filter_filterout): Recompute the length of each
	filter word in case it was compressed due to escape chars.  Don't
	reset the string as it's freed.  Fixes Savannah bug #35410.

	* misc.c (collapse_continuations): Only use POSIX-style
	backslash/newline handling if the .POSIX target is set.
	Addresses Savannah bug #16670 without backward-incompatibility.
	* NEWS: Document behavior change.
	* doc/make.texi (Splitting Lines): New section describing how to
	use backslash/newline to split long lines.

2012-02-26  Paul Smith  <psmith@gnu.org>

	* implicit.c (pattern_search): Check the stem length to avoid
	stack overflows in stem_str.  Fixes Savannah bug #35525.

2012-02-03  Eli Zaretskii  <eliz@gnu.org>

	* w32/subproc/sub_proc.c (proc_stdin_thread, proc_stdout_thread)
	(proc_stderr_thread, process_pipe_io): Ifdef away unused
	functions.

	* w32/subproc/w32err.c (map_windows32_error_to_string) [_MSC_VER]:
	Don't use TLS storage for szMessageBuffer.  Ifdef away special
	code for handling Winsock error codes.  Make the function return a
	`const char *'.  Suggested by Ozkan Sezer.  Fixes Savannah bug #34832.

2012-01-29  Paul Smith  <psmith@gnu.org>

	* gmk-default.scm (to-string-maybe): Variables map to empty strings.
	In Guile 2.0, (define ...) results in a variable object so make
	sure that maps to an empty string in make.
